Overflow-fix

--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,6 +1,5 @@
 body > .container {
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 .rows > .row {
